# rust-sample-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/examples/: indicator_example.py  option_pricing_example.py
python/src/finance_service/: __init__.py  indicators.py  pricing.py
rust/: Cargo.toml
rust/crates/indicator/: Cargo.toml
rust/crates/indicator/src/: lib.rs
rust/crates/pricing/: Cargo.toml
rust/crates/pricing/src/: lib.rs
rust/crates/pyfinance/: Cargo.toml
rust/crates/pyfinance/src/: lib.rs
